maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while (!estSurBiscuit){
    if (KeepHandOnSideWall()){
      avance()
    }else{
      gauche()
      avance()
    }
  }
}

keepHandOnSideWall() : Boolean ={
  gauche()
  if (estFaceMur){
    droite()
    return true
  }else{
    droite()
    return false
  }
  return false
}